@@ -38,7 +38,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)cmd1.c	2.83 (gritter) 10/31/04";
+static char sccsid[] = "@(#)cmd1.c	2.84 (gritter) 11/1/04";
 #endif
 #endif /* not lint */
 
@@ -749,9 +749,10 @@ type1(int *msgvec, int doign, int page, int pipe, int decode,
 			fprintf(obuf, catgets(catd, CATSET, 17,
 				"Message %2d:\n"), *ip);
 		send(mp, obuf, doign ? ignore : 0, NULL,
-				    decode || pipe && value("piperaw") ?
-				    	CONV_NONE : CONV_TODISP,
-				    mstats);
+			decode || pipe && value("piperaw") ?
+				CONV_NONE :
+				doign ? CONV_TODISP : CONV_TODISP_ALL,
+			mstats);
 		if (pipe && value("page")) {
 			putc('\f', obuf);
 		}
